chore: wrap icon in container to ensure consistency in IE11

--- a/src/input-box/styles.scss
+++ b/src/input-box/styles.scss
@@ -10,7 +10,7 @@
   width: 200px;
   height: 40px;
   border: 1px solid $gray-dark;
-  border-radius: 2px;
+  border-radius: $border-radius-base;
   background-color: #fff;
   padding-right: 16px;
   cursor: text;
@@ -28,9 +28,12 @@
   flex-shrink: 1;
 }
 .inputBox input::placeholder { color: $gray; }
-.inputBoxContainsIcon {
-  padding-left: 16px;
+.inputBoxContainsIcon { padding-left: 16px; }
+.leftIcon {
+  flex-grow: 0;
+  flex-shrink: 0;
 }
+
 
 .inputBoxTextarea {
   line-height: $line-height-base;
